leave event support
