# api/blueprints/users/controllers.py
@@ -4,7 +4,6 @@ from hashlib import md5
 from pymysql.err import IntegrityError
 from api.blueprints.accounts.controllers import auth
 from api.blueprints.users.utils import *
-import random
 
 users = Blueprint('user', __name__)
 
@@ -170,7 +169,7 @@ def get_user_events(user_id):
                          order_arg="max_id")
 
 
-@users.route("/addToEvent/<event_id>", methods=["POST"])
+@users.route("/joinEvent/<event_id>", methods=["POST"])
 @auth.login_required
 @require_apikey
 def add_user_to_event(event_id):
@@ -181,6 +180,17 @@ def add_user_to_event(event_id):
     if "role" not in request.args or (request.args["role"] != "hosting" and request.args["role"] != "attending"):
         return make_response("Invalid role parameter.", HTTPStatus.METHOD_NOT_ALLOWED)
     add_user_to_event(user_id, event_id, request.args["role"])
+    return make_response("OK", HTTPStatus.OK)
+
+
+@users.route("/leaveEvent/<event_id>", methods=["POST"])
+@auth.login_required
+@require_apikey
+def remove_user_from_event(event_id):
+    if not event_exists(event_id):
+        return make_response("Invalid Event Id", HTTPStatus.BAD_REQUEST)
+    user_id = g.user.id
+    remove_user_event(user_id, event_id)
     return make_response("OK", HTTPStatus.OK)
 
 
